@@ -253,6 +253,8 @@ sub import {
     # import to main::
     no strict 'refs';
     *{'main::WriteMakefile'} = \&Write if caller(0) eq 'main';
+
+    return (@Existing, @Missing);
 }
 
 sub _running_under {
@@ -815,4 +817,4 @@ END_MAKE
 
 __END__
 
-#line 1069
+#line 1071
